
* SOLR-17164: Add 2 arg variant of vectorSimilarity() function (Sanjay Dutt, hossman)

Optimizations
---------------------
* SOLR-17144: Close searcherExecutor thread per core after 1 minute (Pierre Salagnac, Christine Poerschke)

* GITHUB#2217: Scale to 10K+ collections better in ZkStateReader.refreshCollectionsList (David Smiley)


Bug Fixes
---------------------
* SOLR-17152: Better alignment of Admin UI graph (janhoy)

* SOLR-17148: Fixing Config API overlay property enabling or disabling the cache (Sanjay Dutt, hossman, Eric Pugh)

* PR#2320: Avoid NullPointerException in SolrJ client due to missing
  EnvToSyspropMappings.properties file (janhoy)

* SOLR-17186: Streaming query breaks if token contains backtick (Rahul Goswami via Eric Pugh)

* SOLR-17197: Fix getting fieldType by its name in FileBasedSpellChecker (Andrey Bozhko via Eric Pugh)

* SOLR-17198: AffinityPlacementFactory can fail if Shard leadership changes occur while it is collecting metrics.
  (Paul McArthur)

* SOLR-14892: Queries with shards.info and shards.tolerant can yield multiple null keys in place of shard names
  (Mathieu Marie, David Smiley)

* SOLR-17110: Fixed JacksonJsonWriter to properly quote uuid values in json query response (Andrey Bozhko via Eric Pugh)

* SOLR-17209: Fix NullPointerException in QueryComponent (Vincent Primault via Eric Pugh)

* SOLR-17113: Correct how `/replication?command=details` describes errors in backup operations.  (Przemyslaw Ciezkowski via Christine Poerschke and Jason Gerlowski)

* SOLR-17200: Fix false positive race condition in `/health?requireHealthyCores=true` during core loading (hossman)

* SOLR-17218: Fix indexFetcher logging to include MDC details (hossman)

Dependency Upgrades
---------------------

* SOLR-17157: Upgrade Lucene to 9.10.0 (hossman, Christine Poerschke)

* SOLR-17214: Update forbiddenapis to 3.7 (hossman)

Other Changes
---------------------
* SOLR-17126: Cut over System.getProperty to EnvUtils.getProperty (janhoy)
